best-practices-k8s/disallow_latest_tag/disallow_latest_tag.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
    name: disallow-latest-tag
    annotations:
        policies.kyverno.io/title: Disallow Latest Tag
        policies.kyverno.io/category: Best Practices
        policies.kyverno.io/severity: medium
        policies.kyverno.io/subject: Pod
        kyverno.io/kyverno-version: 1.14.1
        policies.kyverno.io/standards: "cis-eks,cis-kubernetes,cis-aks,cis-gke,iso27001,nsa-cisa,nist-800-53"
        policies.nirmata.io/nsa-cisa-control: "Sec.5.1"
        policies.nirmata.io/nist-800-53-control: "SI-7,CM-11"
        policies.kyverno.io/description: >-
            The ':latest' tag is mutable and can lead to unexpected errors if the image changes. A best practice is to use an immutable tag that maps to a specific version of an application Pod. This policy validates that the image specifies a tag and that it is not called `latest`.
spec:
    validationActions:
        - Audit
    evaluation:
        background:
            enabled: true
    matchConstraints:
        resourceRules:
            - apiGroups: [""]
              apiVersions: ["v1"]
              resources: ["pods"]
              operations: ["CREATE", "UPDATE"]
    validations:
        - expression: "object.spec.containers.all(c, c.image.contains(':'))"
          message: "An image tag is required."
        - expression: "object.spec.containers.all(c, !c.image.endsWith(':latest'))"
          message: "Using a mutable image tag e.g. 'latest' is not allowed."
